third_party/move/move-compiler-v2/tests/checking/naming/unbound_unqualified_function.exp

Diagnostics:
error: no function named `bar` found
  ┌─ tests/checking/naming/unbound_unqualified_function.move:3:9
  │
3 │         bar();
  │         ^^^^^

error: no function named `bar` found
  ┌─ tests/checking/naming/unbound_unqualified_function.move:4:17
  │
4 │         let x = bar();
  │                 ^^^^^

error: no function named `bar` found
  ┌─ tests/checking/naming/unbound_unqualified_function.move:5:10
  │
5 │         *bar() = 0;
  │          ^^^^^

warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
  ┌─ tests/checking/naming/unbound_unqualified_function.move:5:19
  │
5 │         *bar() = 0;
  │                   ^
